--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[![Test-Build-Postman](https://github.com/damarmustikoaji/kelapa/actions/workflows/main.yml/badge.svg?branch=master)](https://github.com/damarmustikoaji/kelapa/actions/workflows/main.yml)",
   "main": "index.js",
   "scripts": {
-    "test": "newman run Jambu.postman_collection.json -e Jambu.postman_environment.json --bail -r htmlextra --reporter-htmlextra-export reports/html_report.html --reporter-htmlextra-darkTheme"
+    "test": "newman run Jambu.postman_collection.json -e Jambu.postman_environment.json --bail -r htmlextra --reporter-htmlextra-export reports/html_report.html --reporter-htmlextra-darkTheme",
+    "newman-test": "newman run Jambu.postman_collection.json -e Jambu.postman_environment.json"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,6 @@
   "homepage": "https://github.com/damarmustikoaji/kelapa#readme",
   "dependencies": {
     "newman": "^5.3.2",
-    "newman-reporter-htmlextra": "^1.22.10"
+    "newman-reporter-htmlextra": "^1.22.11"
   }
 }
