--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,15 @@ jobs:
 
 
       # INstall Node on the runner
-      - name: Install Node
+      - name: setup node version
         uses: actions/setup-node@v3
         with:
-          node-version: "16.x"
+          node-version: '16.x'
+      - name: npm cache
+        uses: actions/cache@v3
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/lock.json') }}
 
 
       # Get current time for reports artiffacts
